--- a/src/main/resources/assets/tcinventoryscan/lang/en_US.lang
+++ b/src/main/resources/assets/tcinventoryscan/lang/en_US.lang
@@ -1,2 +1,3 @@
 tcinventoryscan:scanning=Scanning
 tcinventoryscan:thaumometerTooltip=Inventory Scanning available
+tcinventoryscan:thaumometerTooltipMore=Hover items with the Thaumometer on the cursor to scan.
