--- a/src/main/resources/assets/tcinventoryscan/lang/ru_RU.lang
+++ b/src/main/resources/assets/tcinventoryscan/lang/ru_RU.lang
@@ -1,3 +1,4 @@
 tcinventoryscan:scanning=Сканируем
 tcinventoryscan:thaumometerTooltip=Доступно сканирование инвентаря
 tcinventoryscan:thaumometerTooltipMore=Наведите таумометр на предмет,\nчтобы изучить его.
+tcinventoryscan:serverNotInstalled=На этом сервере не установлен Thaumcraft Inventory Scanning. Он будет отключен.
