--- a/src/main/resources/assets/tcinventoryscan/lang/ru_RU.lang
+++ b/src/main/resources/assets/tcinventoryscan/lang/ru_RU.lang
@@ -1,4 +1,4 @@
-tcinventoryscan:scanning=Сканируем
+tcinventoryscan:scanning=Сканирование
 tcinventoryscan:thaumometerTooltip=Доступно сканирование инвентаря
-tcinventoryscan:thaumometerTooltipMore=Наведите таумометр на предмет,\nчтобы изучить его.
-tcinventoryscan:serverNotInstalled=На этом сервере не установлен Thaumcraft Inventory Scanning. Он будет отключен.
+tcinventoryscan:thaumometerTooltipMore=Наведи таумометр на предмет курсором,\nчтобы его просканировать.
+tcinventoryscan:serverNotInstalled=На данном сервере не установлен Thaumcraft Inventory Scanning. Он будет отключён.
