--- a/src/main/resources/assets/tcinventoryscan/lang/de_de.lang
+++ b/src/main/resources/assets/tcinventoryscan/lang/de_de.lang
@@ -1,4 +1,4 @@
 tcinventoryscan:scanning=Scanne...
-tcinventoryscan:thaumometerTooltip=Inventar Scannung verfügbar
+tcinventoryscan:thaumometerTooltip=Inventar-Scan verfügbar
 tcinventoryscan:thaumometerTooltipMore=Bewegen Sie den Mauszeiger mit dem Thaumometer über den zu scannenden Gegenstand.
 tcinventoryscan:serverNotInstalled=Auf diesem Server ist Thaumcraft Inventory Scanning nicht installiert. Es wird deaktiviert.
